--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backend-stand-alone",
   "version": "1.0.0",
   "description": "new backend for shopify -api, ba",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "jest"
@@ -30,6 +31,7 @@
   "dependencies": {
     "@ngrok/ngrok": "^1.4.1",
     "@shopify/shopify-api": "^11.4.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "ngrok": "^5.0.0-beta.2"
   }
